# ice-cream-dataops-May-26

./: README.md  pyproject.toml
.github/workflows/: deploy.yaml
ice-cream-dataops/: build_info.test.yaml  config.prod.yaml
ice-cream-dataops/function_local_venvs/oee_timeseries/: run_check.py
ice-cream-dataops/modules/bootcamp/ice_cream_api/auth/: icapi_extractors.Group.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/data_sets/: data_sets.DataSet.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/: schedules.Schedule.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/transformations/: create_asset_hierarchy.schedule.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/workflows/: wf_icapi_data_pipeline.WorkFlow.yaml  wf_icapi_data_pipeline.WorkflowVersion.yaml
ice-cream-dataops/modules/bootcamp/use_cases/oee/data_sets/: data_sets.DataSet.yaml
